# ledgerline-ai

./: .gitignore  README.md  pyproject.toml
examples/: README.md  run_all.sh
ledgerline/: __init__.py  claims.py  gateway.py  llm.py  mcp_client.py  metasettle.py  provenance.py  publish.py  reconstruct.py  settle.py  skill.py  writeback.py
ledgerline/agents/: __init__.py  arbiter.py  auditor.py  blastradius.py  common.py  domainassign.py  enricher.py  naive.py  ownerrec.py  piitagger.py  revertpredictor.py  sentinel.py  tabledesc.py  termmapper.py  triage.py
ledgerline/simulator/: __init__.py  runner.py  steward.py  timeline.py  world.py
scoreboard/: .gitignore  package-lock.json  package.json
scoreboard/app/: globals.css  layout.tsx  page.tsx
scoreboard/app/board/: page.tsx
scoreboard/app/methodology/: page.tsx
scoreboard/app/proof/: page.tsx
scoreboard/app/registry/: page.tsx
scoreboard/components/: CalibrationChart.tsx  CalibrationSpark.tsx  VerdictBadge.tsx
scoreboard/components/landing/: CountUp.tsx  GatewayFlow.tsx  Rail.tsx  Reveal.tsx  Tape.tsx
scoreboard/lib/: data.ts  dossiers.ts
scoreboard/supabase/: schema.sql
scripts/: backdate_probe.py  gateway_e2e.py  ingest_world.py  prov_probe.py  publish_scoreboard.py  recon_probe.py  run_agents_demo.py  run_blast_demo.py  run_governance_demo.py  run_writeback.py  smoke_mcp.py
tests/: test_agents.py  test_claims.py  test_gateway.py  test_governance.py  test_meta.py  test_provenance.py  test_reconstruct.py  test_settle.py  test_simulator.py  test_skill.py  test_writeback.py
(+6 files in other folders)
