[project]
name = "ledgerline"
version = "0.1.0"
description = "Trust ledger for AI data agents: settled claims, calibration scores, and a trust-annotating MCP gateway for DataHub"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "acryl-datahub>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ledgerline*"]
